--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="Footer.css" />
     <link rel="stylesheet" href="Header.css" />
     <link rel="stylesheet" href="Addstore.css" />
+    <link rel="stylesheet" href="Added.css" />
 
     <link rel="stylesheet" href="Home.css" />
     <link rel="stylesheet" href="Search.css" />
